# urho3d-test

./: .gitignore  CMakeLists.txt  main.cpp  make.sh
data/CoreData/Textures/: Skybox.xml
data/Data/: exclamation_mark.mtl  plane.mtl  some.mtl  untitled.blend  untitled.dae
